--- a/HPC4.ipynb
+++ b/HPC4.ipynb
@@ -180,118 +180,136 @@
     {
       "cell_type": "code",
       "source": [
-        "cuda_code = r\"\"\"\n",
+        "code = r\"\"\"\n",
         "#include <iostream>\n",
         "#include <cstdlib>\n",
-        "#include <chrono>\n",
         "#include <ctime>\n",
+        "#include <chrono>\n",
         "#include <cuda_runtime.h>\n",
+        "\n",
         "using namespace std;\n",
         "using namespace std::chrono;\n",
         "\n",
-        "__global__ void multiply(int* X, int* Y, int* Z, int M, int N, int K)\n",
-        "{\n",
-        "  int row = blockIdx.y * blockDim.y + threadIdx.y;\n",
-        "  int col = blockIdx.x * blockDim.x + threadIdx.x;\n",
+        "// CUDA kernel to multiply matrices\n",
+        "__global__ void multiply(int* A, int* B, int* C, int M, int N, int K) {\n",
+        "    int row = blockIdx.y * blockDim.y + threadIdx.y;\n",
+        "    int col = blockIdx.x * blockDim.x + threadIdx.x;\n",
         "\n",
-        "  if(row<M && col<K)\n",
-        "  {\n",
-        "    int sum = 0;\n",
-        "    for(int i=0; i<N; i++)\n",
-        "    {\n",
-        "      sum += A[row*N+i] * B[col*i];\n",
+        "    if (row < M && col < K) {\n",
+        "        int sum = 0;\n",
+        "        for (int i = 0; i < N; i++) {\n",
+        "            sum += A[row * N + i] * B[i * K + col];\n",
+        "        }\n",
+        "        C[row * K + col] = sum;\n",
         "    }\n",
-        "    C[row*K+col] = sum;\n",
-        "  }\n",
         "}\n",
         "\n",
-        "void initialize(int* matrix, int rows, int cols)\n",
-        "{\n",
-        "  for(int i=0; i<rows*cols; i++)\n",
-        "  {\n",
-        "    matrix[i] = rand()%10;\n",
-        "\n",
-        "  }\n",
-        "}\n",
-        "\n",
-        "void print(int* matrix, int rows, int cols)\n",
-        "{\n",
-        "  for(int row=0; row<rows; row++)\n",
-        "  {\n",
-        "    for(int col=0; col<cols; col++)\n",
-        "    {\n",
-        "      cout<<matrix[row*cols+col]<<\" \";\n",
+        "// Randomly initialize matrix with values between 0 and 9\n",
+        "void initialize(int* matrix, int rows, int cols) {\n",
+        "    for (int i = 0; i < rows * cols; i++) {\n",
+        "        matrix[i] = rand() % 10;  // Random value from 0 to 9\n",
         "    }\n",
-        "    cout<<\"\\n\";\n",
-        "  }\n",
-        "  cout<<\"\\n\";\n",
         "}\n",
         "\n",
-        "for seqMultiply(int* A, int* B, int* C, int M, int N, int K)\n",
-        "{\n",
-        "  for(int row=0; row<M; row++)\n",
-        "  {\n",
-        "    for(int col=0; col<K; col++)\n",
-        "    {\n",
-        "      int sum=0;\n",
-        "      for(int i=0; i<N; i++)\n",
-        "      {\n",
-        "        sum += A[row*N+i] * B[i*N+col];\n",
-        "      }\n",
-        "      C[row*K+col] = sum;\n",
+        "// Print matrix\n",
+        "void print(int* matrix, int rows, int cols) {\n",
+        "    for (int row = 0; row < rows; row++) {\n",
+        "        for (int col = 0; col < cols; col++) {\n",
+        "            cout << matrix[row * cols + col] << \" \";\n",
+        "        }\n",
+        "        cout << '\\n';\n",
         "    }\n",
-        "  }\n",
+        "    cout << '\\n';\n",
         "}\n",
         "\n",
-        "int main()\n",
-        "{\n",
-        "  srand(time(0));\n",
-        "\n",
-        "  int M,N,K;\n",
-        "  cout<<\"M1 row: \";\n",
-        "  cin>>M;\n",
-        "  cout<<\"M1 col: \";\n",
-        "  cin>>N;\n",
-        "  cout<<\"M2 col: \";\n",
-        "  cin>>K;\n",
-        "\n",
-        "  int *A = new int[M*N];\n",
-        "  int *B = new int[N*K];\n",
-        "  int *C = new int[M*K];\n",
-        "\n",
-        "  initialize(A, M, N);\n",
-        "  initialize(B, N, K);\n",
-        "\n",
-        "  cout<<\"M1: \\n\";\n",
-        "  print(A, M, N);\n",
-        "\n",
-        "  cout<<\"M2: \\n\";\n",
-        "  print(B, N, K);\n",
-        "\n",
-        "  int* x, int* Y, int* Z;\n",
-        "  cudaMalloc(&X, M*N*sizeof(int));\n",
-        "  cudaMalloc(&Y, N*K*sizeof(int));\n",
-        "  cudaMalloc(&Z, M*K*sizeof(int));\n",
-        "\n",
-        "  cudaMemcpy(X, A, M*N*sizeof(int), cudaMemcpyHostToDevice);\n",
-        "  cudaMemcpy(Y, B, N*K*sizeof(int), cudaMemcpyHostToDevice);\n",
-        "  cudaMemcpy(Z, C, M*K*sizeof(int), cudaMemcpyHostToDevice);\n",
-        "\n",
-        "  int THREADS = 16;\n",
-        "  int BLOCK_X = (K+THREADS-1)/THREADS;\n",
-        "  int BLOCK_Y = (M+THREADS-1)/THREADS;\n",
-        "\n",
-        "  dim3 threads(THREADS, THREADS);\n",
-        "  dim3 blocks(BLOCK_X, BLOCK_Y);\n",
-        "\n",
-        "  auto start = high_resolution_clock::now();\n",
-        "  seqMultiply(A, B, C, M, N, K);\n",
-        "  auto stop = high_resolution_clock::now();\n",
-        "  auto seqTime = duration_cast<microseconds>(stop-start);\n",
-        "\n",
-        "  return 0;\n",
+        "// Sequential CPU matrix multiplication\n",
+        "void sequentialMultiply(int* A, int* B, int* C, int M, int N, int K) {\n",
+        "    for (int i = 0; i < M; i++) {\n",
+        "        for (int j = 0; j < K; j++) {\n",
+        "            int sum = 0;\n",
+        "            for (int k = 0; k < N; k++) {\n",
+        "                sum += A[i * N + k] * B[k * K + j];\n",
+        "            }\n",
+        "            C[i * K + j] = sum;\n",
+        "        }\n",
+        "    }\n",
         "}\n",
-        "\"\"\""
+        "\n",
+        "int main() {\n",
+        "    srand(time(0)); // Seed the random number generator\n",
+        "\n",
+        "    int M, N, K;\n",
+        "    cout << \"Enter the number of rows and columns of the first matrix: \";\n",
+        "    cin >> M >> N;\n",
+        "    cout << \"Enter the number of columns of the second matrix: \";\n",
+        "    cin >> K;\n",
+        "\n",
+        "    int* A = new int[M * N];\n",
+        "    int* B = new int[N * K];\n",
+        "    int* C = new int[M * K];\n",
+        "\n",
+        "    initialize(A, M, N);\n",
+        "    initialize(B, N, K);\n",
+        "\n",
+        "    cout << \"Matrix A: \\n\";\n",
+        "    print(A, M, N);\n",
+        "\n",
+        "    cout << \"Matrix B: \\n\";\n",
+        "    print(B, N, K);\n",
+        "\n",
+        "    int *X, *Y, *Z;\n",
+        "    cudaMalloc(&X, M * N * sizeof(int));\n",
+        "    cudaMalloc(&Y, N * K * sizeof(int));\n",
+        "    cudaMalloc(&Z, M * K * sizeof(int));\n",
+        "\n",
+        "    cudaMemcpy(X, A, M * N * sizeof(int), cudaMemcpyHostToDevice);\n",
+        "    cudaMemcpy(Y, B, N * K * sizeof(int), cudaMemcpyHostToDevice);\n",
+        "\n",
+        "    int THREADS = 16;\n",
+        "    int BLOCK_X = (K + THREADS - 1) / THREADS;\n",
+        "    int BLOCK_Y = (M + THREADS - 1) / THREADS;\n",
+        "\n",
+        "    dim3 threads(THREADS, THREADS);\n",
+        "    dim3 blocks(BLOCK_X, BLOCK_Y);\n",
+        "\n",
+        "    // Sequential multiplication\n",
+        "    auto start = high_resolution_clock::now();\n",
+        "    sequentialMultiply(A, B, C, M, N, K);\n",
+        "    auto stop = high_resolution_clock::now();\n",
+        "    auto seq_duration = duration_cast<microseconds>(stop - start);\n",
+        "\n",
+        "    cout << \"Sequential Multiplication of matrix A and B: \\n\";\n",
+        "    print(C, M, K);\n",
+        "\n",
+        "    // Parallel multiplication\n",
+        "    start = high_resolution_clock::now();\n",
+        "    multiply<<<blocks, threads>>>(X, Y, Z, M, N, K);\n",
+        "    cudaDeviceSynchronize();  // Wait for kernel to finish\n",
+        "    cudaMemcpy(C, Z, M * K * sizeof(int), cudaMemcpyDeviceToHost);\n",
+        "    stop = high_resolution_clock::now();\n",
+        "    auto par_duration = duration_cast<microseconds>(stop - start);\n",
+        "\n",
+        "    cout << \"Parallel Multiplication of matrix A and B: \\n\";\n",
+        "    print(C, M, K);\n",
+        "\n",
+        "    cout << \"Sequential Multiplication Time: \" << seq_duration.count() << \" microseconds\" << endl;\n",
+        "    cout << \"Parallel Multiplication Time: \" << par_duration.count() << \" microseconds\" << endl;\n",
+        "\n",
+        "    delete[] A;\n",
+        "    delete[] B;\n",
+        "    delete[] C;\n",
+        "\n",
+        "    cudaFree(X);\n",
+        "    cudaFree(Y);\n",
+        "    cudaFree(Z);\n",
+        "\n",
+        "    return 0;\n",
+        "}\n",
+        "\n",
+        "\"\"\"\n",
+        "\n",
+        "with open(\"mat_mult.cu\", \"w\") as f:\n",
+        "  f.write(code)"
       ],
       "metadata": {
         "id": "nL8LbpqR9nUc"
